--- a/master.css
+++ b/master.css
@@ -148,11 +148,12 @@ a {
 }
 .text {
   color: white;
-  font-size: 2em;
+  font-size: 1.5em;
   text-align: center;
   position: absolute;
   top: 50%;
   left: 50%;
+  width: 80%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
 }
