--- a/master.css
+++ b/master.css
@@ -20,6 +20,7 @@ nav li, footer li {
   list-style: none;
   display: inline-block;
   margin: 2em 4em;
+  margin-bottom: 0em;
 }
 h1 {
   font-size: 1.4em;
@@ -28,24 +29,48 @@ h1 {
   font-size: 1.2em;
 }
 #lucy-sabin {
-  height: 3em;
+  height: 4em;
+  margin-top: -1em;
+}
+.intro-text {
+  margin: 4em 3em;
+  text-align: center;
 }
 .portfolio-wrapper, .about-wrapper {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-  margin: 3em 0em;
+  margin: 0em;
 }
 nav, footer {
   height: auto;
   background: white;
+  position: fixed;
+  width: 100%;
+  z-index: 1;
+}
+nav {
+  top: 0;
+}
+footer {
+  bottom: 0;
+  padding-bottom: 1em;
+}
+#copyright {
+  color: lavender;
 }
 a {
-  color: indigo;
+  color: turquoise;
 }
 .nav-option, .footer-email {
   float: right;
+}
+.footer-email {
+  font-size: 1.2em;
+  color: red;
+  margin: 1em 3em;
+  text-decoration: underline;
 }
 .portfolio-piece {
   margin: .5em;
@@ -90,40 +115,6 @@ a {
   margin: auto;
 }
 
-@media (max-width: 768px) {
-  .nourish-mobile {
-    width: 100%;
-  }
-  ul {
-    height: auto;
-  }
-  nav li {
-    margin: 0em;
-    padding: 1em;
-    display: inherit;
-    text-align: center;
-  }
-  footer li {
-    margin: 0em .5em;
-    line-height: 3em;
-  }
-  .nav-option {
-    float: none;
-  }
-  .portfolio-wrapper, .portfolio-piece, .about-wrapper {
-    margin: 0;
-  }
-  .project-wrapper {
-    width: 90%;
-  }
-  .about-main-text {
-    width: 100%;
-    margin: 2em 1em;
-  }
-  .mobile-view {
-    visibility: visible;
-  }
-}
 #down-arrow {
   height: 1em;
 }
@@ -138,22 +129,21 @@ a {
   width: 100%;
   opacity: 0;
   transition: .5s ease;
-  background-color: black;
+  background-color: lavender;
 }
 @media (max-width: 768px) {
   .overlay {
     opacity: .7;
-
   }
 }
 .container-fade {
   position: relative;
 }
 .container-fade:hover .overlay {
-  opacity: .8;
+  opacity: .9;
 }
 .text {
-  color: white;
+  color: black;
   font-size: 1.5em;
   text-align: center;
   position: absolute;
@@ -162,4 +152,77 @@ a {
   width: 80%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
+}
+.email-button {
+  text-decoration: none;
+  background: coral;
+  border-radius: 1em;
+  padding: 1em 2em;
+  margin-bottom: 1em;
+  color: black;
+  font-size: 1.2em;
+  box-shadow: 10px 10px 5px #888888;
+}
+
+.under-nav, .under-footer {
+  height: 5em;
+}
+
+@media (max-width: 768px) {
+  .intro-text {
+    text-align: left;
+    margin: 1em;
+  }
+  nav {
+    position: relative
+  }
+  .under-nav {
+    height: 0;
+  }
+  ul {
+    margin: 0;
+    height: auto;
+    display: block;
+  }
+
+  #copyright {
+    display: none;
+  }
+  .footer-email {
+    font-size: 1em;
+  }
+  .nourish-mobile {
+    width: 100%;
+  }
+  nav li {
+    margin: 0em;
+    display: inline-block;
+    margin: .5em;
+  }
+  nav ul {
+    text-align: center;
+  }
+  #lucy-sabin {
+    width: 100%;
+    height: auto;
+  }
+  .nav-option {
+    float: none;
+  }
+  .container-fade {
+    margin-bottom: 1em;
+  }
+  .portfolio-wrapper, .portfolio-piece, .about-wrapper {
+    margin: 0;
+  }
+  .project-wrapper {
+    width: 90%;
+  }
+  .about-main-text {
+    width: 100%;
+    margin: 2em 1em;
+  }
+  .mobile-view {
+    visibility: visible;
+  }
 }
