--- a/master.css
+++ b/master.css
@@ -3,7 +3,7 @@
 body, html {
   margin: 0 auto;
   font-family: 'Montserrat', sans-serif;
-  background: #f8f8f8;
+  background: #dbdceb;
 }
 ul {
   padding: 0;
@@ -23,10 +23,10 @@ nav li, footer li {
   margin-bottom: 0em;
 }
 h1, .enlarge {
-  font-size: 1.4em;
+  font-size: 2em;
 }
 h1 {
-  margin-top: 3em;
+  margin-top: 2em;
 }
 .heading {
   font-size: 1.2em;
@@ -36,11 +36,12 @@ h1 {
   margin-top: -1em;
 }
 .intro-text {
-  background-color: white;
+  background-color: ;
   width: 90%;
-  margin: 4em auto;
-  padding: 2em 0;
+  margin: 1em auto;
+  padding: 0em 0;
   text-align: center;
+  font-size: 1.5em;
 }
 .portfolio-wrapper, .about-wrapper {
   display: flex;
@@ -59,6 +60,14 @@ nav, footer {
 nav {
   top: 0;
 }
+
+/* .fixed-nav {
+  position: fixed;
+  /* border-style: solid;
+  border-width: .1em;
+  border-color: silver; */
+
+
 footer {
   bottom: 0;
   padding-bottom: 1em;
@@ -67,10 +76,17 @@ footer {
   color: silver;
 }
 a {
-  color: turquoise;
+  color: purple;
 }
 .nav-option, .footer-email {
   float: right;
+}
+.nav-option a {
+  color: black;
+  text-decoration: none;
+}
+.current {
+  color: turquoise;
 }
 .footer-email {
   font-size: 1.2em;
@@ -169,9 +185,7 @@ a {
     position: relative;
     margin-bottom: 2em;
   }
-  .under-nav {
-    height: 0;
-  }
+
   ul {
     margin: 0;
     height: auto;
@@ -234,7 +248,6 @@ a {
 .contact__para {
   line-height: 1.5em;
   font-size: 1.2em;
-  text-align: center;
 }
 
 .contact__para, .form {
@@ -263,11 +276,11 @@ a {
 
 .contact__button, .form__btn {
   text-align: center;
-  background-color: coral;
+  background-color: #e54969;
   width: 30%;
   max-width: 20em;
   padding: 1em 0em 1em 0em;
-  margin: 4em auto;
+  margin: 2em auto 4em;
   color: white;
 }
 
@@ -294,7 +307,7 @@ a {
   width: 100%;
 }
 .img-panel img {
-  width: 30%;
+  width: 32%;
 }
 
 @media (max-width: 768px) {
@@ -304,11 +317,16 @@ a {
 }
 
 #orgs {
-  margin-bottom: 3em;
+  margin: 3em auto;
+  width: 90%;
+}
+
+#orgs-heading {
+  text-align: center;
 }
 
 .partner-logo {
-  max-width: 13em;
+  max-width: 10em;
   margin: 1em;
 }
 
@@ -318,4 +336,20 @@ a {
 
 .back-top {
   text-align: center;
+}
+
+.my-story-section {
+  background: white;
+  width: 100%;
+}
+
+#lets-connect {
+  width: 50%;
+  margin: 3em auto;
+}
+
+@media (max-width: 768px) {
+  #lets-connect {
+    width: 90%;
+  }
 }
