--- a/master.css
+++ b/master.css
@@ -38,7 +38,7 @@ h1 {
 .intro-text {
   background-color: ;
   width: 90%;
-  margin: 1em auto;
+  margin: 3em auto;
   padding: 0em 0;
   text-align: center;
   font-size: 1.5em;
@@ -179,7 +179,7 @@ a {
     text-align: left;
     margin: 2em auto;
     width: 90%;
-    padding: .5em;
+    padding: 0em;
   }
   nav {
     position: relative;
