--- a/master.css
+++ b/master.css
@@ -28,6 +28,16 @@ h1, .enlarge {
 h1 {
   margin-top: 2em;
 }
+
+@media (max-width: 768px) {
+  h1 {
+    font-size: 1.2em;
+  }
+  h2, h3 {
+    font-size: 1em;
+  }
+}
+
 .heading {
   font-size: 1.2em;
 }
@@ -38,7 +48,7 @@ h1 {
 .intro-text {
   background-color: ;
   width: 90%;
-  margin: 1em auto;
+  margin: 3em auto;
   padding: 0em 0;
   text-align: center;
   font-size: 1.5em;
@@ -108,6 +118,16 @@ a {
   width: 100%;
   height: auto;
 }
+#about-main-img {
+  height: 100%;
+  background: white;
+}
+@media (max-width: 768px) {
+  #about-main-img {
+    background: none;
+  }
+}
+
 .my-approach-list, .links-list {
   list-style-position: inside;
   text-indent: each-line;
@@ -179,7 +199,7 @@ a {
     text-align: left;
     margin: 2em auto;
     width: 90%;
-    padding: .5em;
+    padding: 0em;
   }
   nav {
     position: relative;
@@ -328,10 +348,6 @@ a {
 .partner-logo {
   max-width: 10em;
   margin: 1em;
-}
-
-#more, #h1-more {
-  text-align: right;
 }
 
 .back-top {
