--- a/master.css
+++ b/master.css
@@ -65,7 +65,7 @@ nav, footer {
   height: auto;
   background: white;
   width: 100%;
-  z-index: 1;
+  z-portfolio: 1;
 }
 nav {
   top: 0;
@@ -268,6 +268,7 @@ a {
 .contact__para {
   line-height: 1.5em;
   font-size: 1.2em;
+  text-align: center;
 }
 
 .contact__para, .form {
