--- a/master.css
+++ b/master.css
@@ -3,7 +3,7 @@
 body, html {
   margin: 0 auto;
   font-family: 'Montserrat', sans-serif;
-  background: #dbdceb;
+  background: #eeecf4;
 }
 ul {
   padding: 0;
@@ -65,7 +65,7 @@ nav, footer {
   height: auto;
   background: white;
   width: 100%;
-  z-portfolio: 1;
+  z-index: 1;
 }
 nav {
   top: 0;
@@ -203,7 +203,6 @@ a {
   }
   nav {
     position: relative;
-    margin-bottom: 2em;
   }
 
   ul {
@@ -297,7 +296,7 @@ a {
 
 .contact__button, .form__btn {
   text-align: center;
-  background-color: #e54969;
+  background-color: black;
   width: 30%;
   max-width: 20em;
   padding: 1em 0em 1em 0em;
@@ -368,5 +367,26 @@ a {
 @media (max-width: 768px) {
   #lets-connect {
     width: 90%;
+  }
+}
+
+#landing {
+  background-image: url('./imgs/laptop.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 100% 100%;
+  width: 100%;
+  margin: 0 auto;
+  height: 100vh;
+}
+
+#landing h1 {
+  width: 80%;
+  margin: 3em auto;
+  text-align: center
+}
+
+@media (max-width: 768px) {
+  #landing h1 {
   }
 }
