--- a/master.css
+++ b/master.css
@@ -46,7 +46,6 @@ h1 {
   margin-top: -1em;
 }
 .intro-text {
-  background-color: ;
   width: 90%;
   margin: 3em auto;
   padding: 0em 0;
@@ -372,7 +371,7 @@ a {
 }
 
 #landing {
-  background-image: url('./imgs/laptop.jpg');
+  background-image: url('./imgs/desk1.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 30% 100%;
@@ -382,9 +381,13 @@ a {
 }
 
 #landing h1 {
-  width: 80%;
+  width: 60%;
+  max-width: 1000px;
   margin: 3em auto;
-  text-align: center
+  padding: 1em;
+  text-align: center;
+  background-color: black;
+  color: white;
 }
 
 .under-nav {
