--- a/master.css
+++ b/master.css
@@ -451,3 +451,16 @@ a {
   width: 100%;
   margin: 0 auto;
 }
+
+#contact-redirect {
+  margin: 3em auto;
+  width: 100%;
+  background: #eeecf4;
+}
+
+#contact-redirect p {
+  text-align: center;
+  margin: 0;
+  line-height: 1.5em;
+  font-size: 1.5em;
+}
